--- a/hello.html
+++ b/hello.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>HELLO THIS IS SALAH</h1>
-    <style src="style.css"></style>
+    <h1>HELLO THIS IS NEW BRANCH</h1>
     <script src="app.js"></script>
 </body>
 </html>
